# Youtify

./: .gitignore  AGENTS.md  CHANGELOG.md  DOCKERHUB_README.md  Dockerfile  README.md  TODO.md  database.py  entrypoint.sh  main.py  pyproject.toml  requirements.txt  youtube_downloader.py
.github/workflows/: docker-image.yml
static/: app.js  index.html  library.js  metadata.js  mixer.js  pipeline.js  preview.js  search.js  style.css  thumbnail.js
